tests/snapshots/run_wpt_conformance__litert_identity_float16_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "identity.https.any.js",
    "identity float16 5D tensor",
    "litert",
    "PASS",
)
