tests/snapshots/run_wpt_conformance__litert_instanceNormalization_float16_4D_tensor_all_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
instance_normalization.https.any.js instanceNormalization float16 4D tensor all options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: InstanceNormalization { input: 1, options: Some(MLInstanceNormalizationOptions { label: "", scale: Some(2), bias: Some(0), epsilon: 1e-6, layout: "nhwc" }), outputs: [3] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    instanceNormInput: f16[2, 2, 2, 3];
  }

  consts {
    operand_0: f16[3] @bytes([34, 208, 131, 68, 190, 208]);
    operand_2: f16[3] @bytes([231, 213, 43, 84, 41, 214]);
  }

  nodes {
    [instanceNormOutput] = instanceNormalization(instanceNormInput, bias=0, epsilon=1e-6, label="", layout="nhwc", scale=2);
  }

  outputs { instanceNormOutput; }
}
